setting create route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     <%for(post of posts){%>
         <div class="post">
             <h3 class="user">@<%=post.username%></h3>
-            <h4><%=post.content%></h4>
+            <h4 class="content"><%=post.content%></h4>
         </div>
     <%}%>
 </body>
