added redirect option in response

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,7 +8,7 @@
 <body>
     <form method="post" action="/posts">
         <input placeholder="Enter your username" name="username"><br /><br />
-        <textarea placeholder="Write your post" name="text"></textarea><br />
+        <textarea placeholder="Write your post" name="content"></textarea><br />
         <button>Submit</button>
     </form>
 </body>
