--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,5 +14,6 @@
             <h4 class="content"><%=post.content%></h4>
         </div>
     <%}%>
+    <a href="https://localhost:8080/posts/new">Create new post</a>
 </body>
 </html>
