--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,11 @@
         <div class="post">
             <h3 class="user">@<%=post.username%></h3>
             <h4 class="content"><%=post.content%></h4>
+            <a href="http://localhost:8080/posts/<%= post.id %>">Show in detail</a>
         </div>
     <%}%>
-    <a href="https://localhost:8080/posts/new">Create new post</a>
+    <br />
+    <br />
+    <a href="http://localhost:8080/posts/new">Create new post</a>
 </body>
 </html>
