--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,9 @@
             <h4 class="content"><%=post.content%></h4>
             <a href="http://localhost:8080/posts/<%= post.id %>">Show in detail</a>
              <a href="http://localhost:8080/posts/<%= post.id %>/edit">Edit</a>
+             <form method="post" action="/posts/<%= post.id %>?_method=DELETE">
+                <button>Delete Post</button>
+            </form>
         </div>
     <%}%>
     <br />
